<resources>

    <string name="SessionsCtrl">Sessions</string>
    <string name="continueSession">continue</string>
    <string name="startNewSession">start new Session</string>
    <string name="SessionResults">Results</string>
    <string name="titleSessions">Sessions</string>
    <string name="titleSessionDelete">Delete Session</string>
    <string name="titleSessionOpen">Open Session</string>
    <string name="sessionNew">New Session</string>
    <string name="sessionName">Name</string>
     <string name="sessionCantDeleteCurrent">Can\'t delete current session</string>

    <string name="app_name">Dapp</string>
    <string name="players">Players</string>
    <string name="choosePlayers">Choose Players</string>
    <string name="btnContinueInsertGame">Continue</string>
    <string name="title_activity_main">DappActivity</string>
    <string name="dappSettings">settings</string>
    <string name="playersCtrl">Players</string>
    <string name="btnAddGame">Add Game</string>
    <string name="btnAddBockForNextGame">+Bock</string>
    <string name="btnRmBockForNextGame">-Bock</string>
    <string name="SessionOpen">Open Session</string>
    <string name="SessionDelete">Delete Session</string>
    <string name="playerRename">Rename Player</string>
    <string name="playerDelete">Delete Player</string>
    <string name="winners">Winner</string>
    <string name="points">Points</string>
    <string name="bock">Bock</string>
    <string name="boecke">Boecke</string>
    <string name="addGame">Add Game</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="prefDialogTitleDealerPos">Dealer Position Difference</string>
    <string name="prefItemTitleDealerPos">Dealer Position Difference</string>
    <string name="prefCategoryTitle">Settings</string>
    <string name="prefDialogTitleMaxPlayersize">Max. Players</string>
    <string name="prefItemTitleMaxPlayersize">Max. Number of players</string>
    <string name="prefDialogTitleMinPlayersize">Number of Players</string>
    <string name="prefItemTitleMinPlayersize">Number of Players</string>
    <string name="prefItemTitleCountMinus">Minus</string>
    <string name="prefSummaryCountMinus">count negative? </string>
    <string name="prefItemHideInactive">Hide inactive players</string>
    <string name="prefSummaryHideInactive">hide? </string>
    <string name="prefDialogTitleMaxBoecke">Max.Böcke</string>
    <string name="prefItemTitleMaxBoecke">Number of Böcke</string>
    <string name="prefItemTitleCutBoecke">Cut Böcke?</string>
    <string name="prefSummaryCutBoecke">Cut Böcke</string>
    <string name="titlePlayerRename">Rename Player</string>
    <string name="titlePlayerDelete">Delete Player</string>
    <string name="titleManagePlayers">Manage Players</string>
    <string name="titleDiagram">Diagram</string>
    <string name="settingsUpdated">Settings updated</string>
    <string name="addResult">Add Result</string>
    <string name="oneWinnerOnlyQ">Just one winner?</string>
    <string name="deletePlayerQ">Delete Player? This Sessions will be deletet also:\n</string>
    <string name="editGameById">Edit Game %1$d?"</string>
    <string name="newBoeckeToAdd">New Boecke: %1$d</string>
    <color name="bg1">#cecece</color>

</resources>