<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/prefCategoryTitle" >
        <ListPreference
            android:title="@string/prefItemTitleMaxPlayersize" 
            android:defaultValue="7"
            android:dialogTitle="@string/prefDialogTitleMaxPlayersize"
            android:entries="@array/entries_list_playersize_list_preference"
            android:entryValues="@array/entries_list_playersize_list_preference"
            android:key="playersize_list_preference" />
        
         <ListPreference
            android:title="@string/prefItemTitleMinPlayersize" 
            android:defaultValue="4"
            android:dialogTitle="@string/prefDialogTitleMinPlayersize"
            android:entries="@array/entries_list_playersize_list_preference"
            android:entryValues="@array/entries_list_playersize_list_preference"
            android:key="min_playersize_list_preference" />
        
       <CheckBoxPreference
            android:defaultValue="true"
            android:key="hide_inactive_players_preference"
            android:summary="@string/prefSummaryHideInactive"
            android:title="@string/prefItemHideInactive" />

        <EditTextPreference
            android:dialogTitle="@string/prefDialogTitleMaxBoecke"
            android:key="maxboecke_preference"
            android:numeric="integer"
            android:defaultValue="0"
            android:title="@string/prefItemTitleMaxBoecke" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="count_minus_preference"
            android:summary="@string/prefSummaryCountMinus"
            android:title="@string/prefItemTitleCountMinus" />
        
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="cut_boecke_preference"
            android:summary="@string/prefSummaryCutBoecke"
            android:title="@string/prefItemTitleCutBoecke" />
        
           
         <EditTextPreference
            android:dialogTitle="@string/prefDialogTitleDealerPos"
            android:key="dealer_pos_diff_preference"
            android:numeric="integer"
            android:title="@string/prefItemTitleDealerPos" />
    </PreferenceCategory>

  

</PreferenceScreen>