<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnAddGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnAddGame" >
            </Button>



            <TextView
                android:id="@+id/text_view_boecke_next_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"

                >


            </TextView>

            <Button
                android:id="@+id/btnAddBockForNextGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnAddBockForNextGame"
                android:visibility="invisible"
                >

            </Button>




            <Button
                android:id="@+id/btnRMBockForNextGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnRmBockForNextGame"
                android:visibility="invisible"

                >

            </Button>

        </LinearLayout>
    </TableRow>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow
            android:id="@+id/full_result_header_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </TableRow>
    </TableLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" >

        <TableLayout
            android:id="@+id/full_result_table_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1" >
        </TableLayout>
    </ScrollView>

</LinearLayout>