<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/verLayout1"
                android:layout_width="120dp"
                android:layout_height="fill_parent"
                android:layout_margin="@dimen/default_margin"
                android:background="@color/bg1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/winners" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="@dimen/default_margin"
                android:background="@color/bg1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/text_viewPoints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/points" >
                </TextView>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:id="@+id/editPoints"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="0" >

                        <requestFocus android:layout_width="match_parent" >
                        </requestFocus>
                    </EditText>

                    <Button
                        android:id="@+id/pointPlusBtn"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="+" >
                    </Button>

                    <Button
                        android:id="@+id/pointMinusBtn"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="-" >
                    </Button>
                </TableRow>

                <TextView
                    android:id="@+id/lblBoecke"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/boecke"
                    android:visibility="invisible" >

                </TextView>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:id="@+id/editBoecke"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="0"
                        android:visibility="invisible" >

                    </EditText>

                    <Button
                        android:id="@+id/bockPlusBtn"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="+"
                        android:visibility="invisible" >

                    </Button>

                    <Button
                        android:id="@+id/bockMinusBtn"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:visibility="invisible" >

                    </Button>
                </TableRow>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/addGameBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/ok" >
            </Button>
        </LinearLayout>

    </LinearLayout>

</ScrollView>